/*!
* @file
* @brief Clavis2Config
*
* @copyright Copyright (C) University of Bristol 2019
*    This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
*    If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
*    See LICENSE file for details.
* @date 18/04/2019
* @author Richard Collins <richard.collins@bristol.ac.uk>
*/

syntax = "proto3";
import "Device.proto";
package cqp.config;

/// Alice handheld config
message Clavis2Config {
    /// standard device details
    remote.ControlDetails controlParams = 1;
    /// the address to connect to if we're alice
    string bobAddress = 2;
}
